--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,23 +33,23 @@
             android:textColor="@android:color/black"/>
 
         <TextView
-            android:id="@+id/player_y"
+            android:id="@+id/player_O"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/player_y"
+            android:text="@string/player_O"
             android:layout_below="@id/player_x_score"
             android:textColor="@android:color/black"
             android:textSize="24sp"/>
 
         <TextView
-            android:id="@+id/player_y_score"
+            android:id="@+id/player_O_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/player_y"
+            android:layout_toEndOf="@+id/player_O"
             android:text="@string/_0"
             android:layout_below="@id/player_x_score"
             android:textSize="24sp"
-            android:layout_marginStart="9dp"
+            android:layout_marginStart="8dp"
             android:textColor="@android:color/black"/>
 
         <Button
